tests/scripts/type_errors/invalid_field_access.roto
fn foo() {
	let b = String.foo;
}
